added query rewriting

--- a/advanced_rag.ipynb
+++ b/advanced_rag.ipynb
@@ -49,7 +49,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -75,7 +75,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [
         {
@@ -114,7 +114,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -197,7 +197,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -249,7 +249,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -295,7 +295,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -363,7 +363,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -461,10 +461,41 @@
         "        \n",
         "        Is this answer verifiable?\n",
         "        \"\"\"\n",
+        "    elif prompt_type == \"rewrite\":\n",
+        "        template = \"\"\"\n",
+        "        You are an AI assistant helping to optimize search queries for a Retrieval-Augmented Generation (RAG) system.\n",
+        "        Your task is to rewrite the user's original query to make it more specific, context-rich, and focused,\n",
+        "        so it improves the chances of retrieving the most relevant documents.\n",
+        "\n",
+        "        Original Query: {question}\n",
+        "\n",
+        "        Rewritten Query:\n",
+        "        \"\"\"\n",
         "    else:\n",
         "        raise ValueError(f\"Unknown prompt type: {prompt_type}\")\n",
         "\n",
         "    return PromptTemplate.from_template(template)\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Prompt rewriting"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 27,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def rewrite_query(original_query, llm):\n",
+        "    prompt = get_prompt(\"rewrite\")\n",
+        "    rewriter = prompt | llm\n",
+        "    response = rewriter.invoke(original_query)\n",
+        "    print(\"Rewritten query:\", response)\n",
+        "    return response"
       ]
     },
     {
@@ -477,7 +508,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 29,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -487,13 +518,19 @@
         "    prompt_type: str = \"zero_shot\",\n",
         "    use_memory: bool = False,\n",
         "    use_reranking: bool = False,\n",
+        "    rewrite: bool = False,\n",
         "    retriever_k: int = 4,\n",
-        "    top_k_chunks: int = 20\n",
+        "    top_k_chunks: int = 20,\n",
+        "    additional_prompt_instruction: str = None\n",
         "):\n",
         "    \"\"\"\n",
-        "    Create a RAG chain with optional memory, reranking, and query rewriting.\n",
+        "    Create a RAG chain with optional memory, reranking, query rewriting,\n",
+        "    and additional prompt instruction (e.g., 'limit to 100 words').\n",
         "    \"\"\"\n",
         "    prompt = get_prompt(prompt_type)\n",
+        "\n",
+        "    if additional_prompt_instruction:\n",
+        "        prompt.template += f\"\\n\\nInstruction: {additional_prompt_instruction}\"\n",
         "\n",
         "    memory = (\n",
         "        ConversationBufferMemory(\n",
@@ -501,21 +538,20 @@
         "            input_key=\"question\",\n",
         "            output_key=\"answer\",\n",
         "            return_messages=True\n",
-        "        )\n",
-        "        if use_memory else None\n",
+        "        ) if use_memory else None\n",
         "    )\n",
         "\n",
-        "    if use_reranking:\n",
-        "        retriever = create_parent_document_llm_reranker(\n",
+        "    retriever = (\n",
+        "        create_parent_document_llm_reranker(\n",
         "            vectorstore=vectorstore,\n",
         "            top_k_chunks=top_k_chunks,\n",
         "            top_k_parents=retriever_k\n",
-        "        )\n",
-        "    else:\n",
-        "        retriever = vectorstore.as_retriever(\n",
+        "        ) if use_reranking else\n",
+        "        vectorstore.as_retriever(\n",
         "            search_type=\"similarity\",\n",
         "            search_kwargs={\"k\": retriever_k}\n",
         "        )\n",
+        "    )\n",
         "\n",
         "    base_chain = ConversationalRetrievalChain.from_llm(\n",
         "        llm=llm,\n",
@@ -526,12 +562,18 @@
         "        verbose=False\n",
         "    )\n",
         "\n",
-        "    return base_chain, memory"
+        "    if rewrite:\n",
+        "        def chain_with_rewriting(inputs):\n",
+        "            inputs[\"question\"] = rewrite_query(inputs[\"question\"], llm)\n",
+        "            return base_chain.invoke(inputs)\n",
+        "        return chain_with_rewriting, memory\n",
+        "\n",
+        "    return base_chain, memory\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 12,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -550,27 +592,50 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 20,
       "metadata": {},
       "outputs": [],
       "source": [
-        "def initialize_rag():\n",
-        "    docs = ['https://assets.pokemon.com/assets/cms2/pdf/trading-card-game/rulebook/sm7_rulebook_en.pdf','https://media.wizards.com/images/magic/tcg/resources/rules/MagicCompRules_21031101.pdf','https://cdn.1j1ju.com/medias/d3/22/83-monopoly-rulebook.pdf','https://fgbradleys.com/wp-content/uploads/rules/Monopoly_Rules.pdf?srsltid=AfmBOorDaiGKyaEWIQFd-au0rl8-tKoqedlzy_6r4EETpj_ZMIUYsNMQ']\n",
-        "    process_and_store_documents(docs,'800','80', persist_directory=\"./faiss_index\")\n",
-        "    faiss_db = FAISS.load_local(\"./faiss_index\", EMBEDDING_MODEL, allow_dangerous_deserialization=True)\n",
+        "def initialize_rag(\n",
+        "    new_docs: List[str] = None,\n",
+        "    persist_directory: str = \"./faiss_index\",\n",
+        "    chunk_size: str = \"800\",\n",
+        "    chunk_overlap: str = \"80\",\n",
+        "    model_choice: str = \"gemini\"  # or \"gpt\"\n",
+        "):\n",
         "    load_dotenv()\n",
-        "    GEMINI_API_KEY = os.getenv(\"GEMINI_API_KEY\")\n",
+        "    base_docs = [\n",
+        "        'https://assets.pokemon.com/assets/cms2/pdf/trading-card-game/rulebook/sm7_rulebook_en.pdf',\n",
+        "        'https://media.wizards.com/images/magic/tcg/resources/rules/MagicCompRules_21031101.pdf',\n",
+        "        'https://cdn.1j1ju.com/medias/d3/22/83-monopoly-rulebook.pdf',\n",
+        "        'https://fgbradleys.com/wp-content/uploads/rules/Monopoly_Rules.pdf?srsltid=AfmBOorDaiGKyaEWIQFd-au0rl8-tKoqedlzy_6r4EETpj_ZMIUYsNMQ'\n",
+        "    ]\n",
         "\n",
-        "    if not GEMINI_API_KEY:\n",
-        "        raise ValueError(\"GEMINI_API_KEY not found in environment variables\")\n",
+        "    all_docs = base_docs + (new_docs or [])\n",
         "\n",
-        "    llm = GoogleGenerativeAI(\n",
-        "        api_key=GEMINI_API_KEY,\n",
-        "        model=\"gemini-2.0-flash\",\n",
-        "        verbose=False\n",
+        "    faiss_db = process_and_store_documents(\n",
+        "        documents=all_docs,\n",
+        "        chunk_size=chunk_size,\n",
+        "        chunk_overlap=chunk_overlap,\n",
+        "        persist_directory=persist_directory\n",
         "    )\n",
         "\n",
-        "    return faiss_db, llm"
+        "    if model_choice == \"gpt\":\n",
+        "        openai_key = os.getenv(\"OPENAI_API_KEY\")\n",
+        "        if not openai_key:\n",
+        "            raise ValueError(\"OPENAI_API_KEY not found in environment variables\")\n",
+        "        llm = ChatOpenAI(api_key=openai_key, model=\"gpt-3.5-turbo\", temperature=0.0)\n",
+        "\n",
+        "    elif model_choice == \"gemini\":\n",
+        "        gemini_key = os.getenv(\"GEMINI_API_KEY\")\n",
+        "        if not gemini_key:\n",
+        "            raise ValueError(\"GEMINI_API_KEY not found in environment variables\")\n",
+        "        llm = GoogleGenerativeAI(api_key=gemini_key, model=\"gemini-2.0-flash\", verbose=False)\n",
+        "\n",
+        "    else:\n",
+        "        raise ValueError(\"Invalid model_choice. Use 'gpt' or 'gemini'.\")\n",
+        "\n",
+        "    return faiss_db, llm\n"
       ]
     },
     {
@@ -582,31 +647,37 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 21,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "No new documents to add.\n"
+          ]
+        }
+      ],
       "source": [
-        "# # Prepare documents\n",
-        "# docs = ['https://assets.pokemon.com/assets/cms2/pdf/trading-card-game/rulebook/sm7_rulebook_en.pdf','https://media.wizards.com/images/magic/tcg/resources/rules/MagicCompRules_21031101.pdf','https://cdn.1j1ju.com/medias/d3/22/83-monopoly-rulebook.pdf','https://fgbradleys.com/wp-content/uploads/rules/Monopoly_Rules.pdf?srsltid=AfmBOorDaiGKyaEWIQFd-au0rl8-tKoqedlzy_6r4EETpj_ZMIUYsNMQ']\n",
-        "# process_and_store_documents(docs,'800','80', persist_directory=\"./faiss_index\")\n",
-        "# faiss_db = FAISS.load_local(\"./faiss_index\", EMBEDDING_MODEL, allow_dangerous_deserialization=True)"
+        "if __name__ == \"__main__\":\n",
+        "    faiss_db, llm = initialize_rag()"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 34,
       "metadata": {},
       "outputs": [],
       "source": [
-        "# rag_chain, rag_memory = create_rag_chain(\n",
-        "#     vectorstore=faiss_db,\n",
-        "#     llm=llm,\n",
-        "#     prompt_type=\"react\",\n",
-        "#     use_memory=True,\n",
-        "#     retriever_k=3,\n",
-        "#     use_reranking=True,\n",
-        "#     top_k_chunks=10\n",
-        "# )"
+        "rag_chain, rag_memory = create_rag_chain(\n",
+        "    vectorstore=faiss_db,\n",
+        "    llm=llm,\n",
+        "    prompt_type=\"react\",\n",
+        "    use_memory=True,\n",
+        "    use_reranking=True,\n",
+        "    rewrite=True,\n",
+        "    additional_prompt_instruction=\"provide only final answer\"\n",
+        ")"
       ]
     },
     {
@@ -619,110 +690,140 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 36,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "🔍 Query: what is EX card?\n",
+            "Rewritten query: Explain the concept of a Pokémon EX card, including its key characteristics, gameplay mechanics, and differences from regular Pokémon cards.\n",
+            "\n",
+            "🧠 Answer:\n",
+            "A Pokémon EX card is a powerful version of a Pokémon with higher HP and stronger attacks than regular Pokémon cards. The \"EX\" is part of the Pokémon's name, allowing you to have up to 4 of the regular version and 4 of the EX version in your deck. The major drawback of Pokémon-EX is that when one is Knocked Out, your opponent takes 2 Prize cards instead of 1. They play like any other Pokémon card otherwise and can come in regular and full-art rare Ultra versions.\n",
+            "\n",
+            "🔎 Retrieved Documents:\n",
+            "\n",
+            "📄 Chunk #1\n",
+            "📚 Source: documents\\sm7_rulebook_en.pdf\n",
+            "📄 Page: 0\n",
+            "🏷️ Rerank Score: -0.997477650642395\n",
+            "\n",
+            "📄 Chunk #2\n",
+            "📚 Source: documents\\sm7_rulebook_en.pdf\n",
+            "📄 Page: 2\n",
+            "🏷️ Rerank Score: -0.997477650642395\n",
+            "\n",
+            "📄 Chunk #3\n",
+            "📚 Source: documents\\sm7_rulebook_en.pdf\n",
+            "📄 Page: 2\n",
+            "🏷️ Rerank Score: -0.997477650642395\n",
+            "\n",
+            "📄 Chunk #4\n",
+            "📚 Source: documents\\sm7_rulebook_en.pdf\n",
+            "📄 Page: 4\n",
+            "🏷️ Rerank Score: -0.997477650642395\n",
+            "\n",
+            "📄 Chunk #5\n",
+            "📚 Source: documents\\sm7_rulebook_en.pdf\n",
+            "📄 Page: 5\n",
+            "🏷️ Rerank Score: -0.997477650642395\n",
+            "\n",
+            "📄 Chunk #6\n",
+            "📚 Source: documents\\sm7_rulebook_en.pdf\n",
+            "📄 Page: 10\n",
+            "🏷️ Rerank Score: -0.997477650642395\n",
+            "\n",
+            "📄 Chunk #7\n",
+            "📚 Source: documents\\sm7_rulebook_en.pdf\n",
+            "📄 Page: 21\n",
+            "🏷️ Rerank Score: -0.997477650642395\n",
+            "\n",
+            "📄 Chunk #8\n",
+            "📚 Source: documents\\sm7_rulebook_en.pdf\n",
+            "📄 Page: 25\n",
+            "🏷️ Rerank Score: -0.997477650642395\n",
+            "\n",
+            "📄 Chunk #9\n",
+            "📚 Source: documents\\sm7_rulebook_en.pdf\n",
+            "📄 Page: 27\n",
+            "🏷️ Rerank Score: -0.997477650642395\n",
+            "\n",
+            "📄 Chunk #10\n",
+            "📚 Source: documents\\sm7_rulebook_en.pdf\n",
+            "📄 Page: 28\n",
+            "🏷️ Rerank Score: -0.997477650642395\n",
+            "\n",
+            "📄 Chunk #11\n",
+            "📚 Source: documents\\sm7_rulebook_en.pdf\n",
+            "📄 Page: 31\n",
+            "🏷️ Rerank Score: -0.997477650642395\n",
+            "\n",
+            "📄 Chunk #12\n",
+            "📚 Source: documents\\sm7_rulebook_en.pdf\n",
+            "📄 Page: 31\n",
+            "🏷️ Rerank Score: -0.997477650642395\n",
+            "\n",
+            "📄 Chunk #13\n",
+            "📚 Source: documents\\sm7_rulebook_en.pdf\n",
+            "📄 Page: 31\n",
+            "🏷️ Rerank Score: -0.997477650642395\n",
+            "\n",
+            "📄 Chunk #14\n",
+            "📚 Source: documents\\sm7_rulebook_en.pdf\n",
+            "📄 Page: 32\n",
+            "🏷️ Rerank Score: -0.997477650642395\n",
+            "\n",
+            "📄 Chunk #15\n",
+            "📚 Source: documents\\sm7_rulebook_en.pdf\n",
+            "📄 Page: 32\n",
+            "🏷️ Rerank Score: -0.997477650642395\n",
+            "\n",
+            "📄 Chunk #16\n",
+            "📚 Source: documents\\sm7_rulebook_en.pdf\n",
+            "📄 Page: 32\n",
+            "🏷️ Rerank Score: -0.997477650642395\n",
+            "\n",
+            "📄 Chunk #17\n",
+            "📚 Source: documents\\sm7_rulebook_en.pdf\n",
+            "📄 Page: 32\n",
+            "🏷️ Rerank Score: -0.997477650642395\n",
+            "\n",
+            "📄 Chunk #18\n",
+            "📚 Source: documents\\sm7_rulebook_en.pdf\n",
+            "📄 Page: 32\n",
+            "🏷️ Rerank Score: -0.997477650642395\n",
+            "\n",
+            "📄 Chunk #19\n",
+            "📚 Source: documents\\sm7_rulebook_en.pdf\n",
+            "📄 Page: 33\n",
+            "🏷️ Rerank Score: -0.997477650642395\n",
+            "\n",
+            "📄 Chunk #20\n",
+            "📚 Source: documents\\sm7_rulebook_en.pdf\n",
+            "📄 Page: 33\n",
+            "🏷️ Rerank Score: -0.997477650642395\n"
+          ]
+        }
+      ],
       "source": [
-        "# faiss_memory = create_memory_vectorstore(\n",
-        "#     embedding_model=EMBEDDING_MODEL, path=\"memory_vectorstore\"\n",
-        "# )\n",
+        "# Test some queries\n",
+        "test_queries = [\n",
+        "    \"what is EX card?\"\n",
+        "]\n",
         "\n",
-        "# # Test some queries\n",
-        "# test_queries = [\n",
-        "#     \"what is EX card?\",\n",
-        "#     \"what is haste?\",\n",
-        "#     \"how to build a hotel?\"\n",
-        "# ]\n",
-        "\n",
-        "# for query in test_queries:\n",
-        "#     print(f\"\\n🔍 Query: {query}\")\n",
-        "#     result = rag_chain({\"question\": query})\n",
-        "#     print_result_summary(result)\n",
-        "#     store_to_memory_vectorstore(\n",
-        "#         question=query,\n",
-        "#         answer=result[\"answer\"],\n",
-        "#         vectorstore=faiss_memory\n",
-        "#     )"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "## Rewritten prompt\n",
-        "Here we will use LLM to rewrite prompts itself for better answers - TO BE IMPLEMENTED"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "# test_queries = [\n",
-        "#     \"what is EX card?\",\n",
-        "#     \"what is haste?\",\n",
-        "#     \"how to build a hotel?\"\n",
-        "# ]\n",
-        "# for query in test_queries:\n",
-        "#     result = rag_chain({\"question\": query, \"chat_history\": []})\n",
-        "#     print_result_summary(result)\n",
-        "#     store_to_memory_vectorstore(\n",
-        "#         question=query,\n",
-        "#         answer=result[\"answer\"],\n",
-        "#         vectorstore=faiss_memory,         \n",
-        "#         embedding_model=EMBEDDING_MODEL\n",
-        "#     )"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "## RAGAS EVALUATION"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 16,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "# from ragas.metrics import faithfulness, answer_relevancy, context_precision\n",
-        "\n",
-        "# metrics = [faithfulness, answer_relevancy, context_precision]"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 17,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "# from ragas import evaluate\n",
-        "# from ragas.llms import LangchainLLMWrapper\n",
-        "\n",
-        "# # Wrap the LLM\n",
-        "# evaluator_llm = LangchainLLMWrapper(llm)\n",
-        "\n",
-        "# # Evaluate the dataset\n",
-        "# results = evaluate(dataset=eval_dataset, metrics=metrics, llm=evaluator_llm)\n",
-        "\n",
-        "# # Display the results\n",
-        "# print(results)"
+        "for query in test_queries:\n",
+        "    print(f\"\\n🔍 Query: {query}\")\n",
+        "    result = rag_chain({\"question\": query})\n",
+        "    print_result_summary(result)"
       ]
     }
   ],
   "metadata": {
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "venv",
       "language": "python",
       "name": "python3"
     },
