fixed issue with query rewriting

--- a/advanced_rag.ipynb
+++ b/advanced_rag.ipynb
@@ -486,7 +486,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -495,7 +495,9 @@
         "    rewriter = prompt | llm\n",
         "    response = rewriter.invoke(original_query)\n",
         "    print(\"Rewritten query:\", response)\n",
-        "    return response"
+        "    content = response.content if hasattr(response, \"content\") else str(response)\n",
+        "    print(\"Rewritten content:\", content)\n",
+        "    return content"
       ]
     },
     {
@@ -665,19 +667,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
-        "rag_chain, rag_memory = create_rag_chain(\n",
-        "    vectorstore=faiss_db,\n",
-        "    llm=llm,\n",
-        "    prompt_type=\"react\",\n",
-        "    use_memory=True,\n",
-        "    use_reranking=True,\n",
-        "    rewrite=True,\n",
-        "    additional_prompt_instruction=\"provide only final answer\"\n",
-        ")"
+        "if __name__ == \"__main__\":\n",
+        "    rag_chain, rag_memory = create_rag_chain(\n",
+        "        vectorstore=faiss_db,\n",
+        "        llm=llm,\n",
+        "        prompt_type=\"react\",\n",
+        "        use_memory=True,\n",
+        "        use_reranking=True,\n",
+        "        rewrite=True,\n",
+        "        additional_prompt_instruction=\"provide only final answer\"\n",
+        "    )"
       ]
     },
     {
@@ -690,7 +693,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -809,21 +812,21 @@
         }
       ],
       "source": [
-        "# Test some queries\n",
-        "test_queries = [\n",
-        "    \"what is EX card?\"\n",
-        "]\n",
-        "\n",
-        "for query in test_queries:\n",
-        "    print(f\"\\n🔍 Query: {query}\")\n",
-        "    result = rag_chain({\"question\": query})\n",
-        "    print_result_summary(result)"
+        "if __name__ == \"__main__\":\n",
+        "    test_queries = [\n",
+        "        \"what is EX card?\"\n",
+        "    ]\n",
+        "    \n",
+        "    for query in test_queries:\n",
+        "        print(f\"\\n🔍 Query: {query}\")\n",
+        "        result = rag_chain({\"question\": query})\n",
+        "        print_result_summary(result)"
       ]
     }
   ],
   "metadata": {
     "kernelspec": {
-      "display_name": "venv",
+      "display_name": "Python 3",
       "language": "python",
       "name": "python3"
     },
