--- a/advanced_rag.ipynb
+++ b/advanced_rag.ipynb
@@ -197,26 +197,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
-        "def process_and_store_documents(documents, chunk_size, chunk_overlap,\n",
-        "                                embedding_model=EMBEDDING_MODEL,\n",
-        "                                persist_directory=\"faiss_index\") -> FAISS:\n",
-        "    \"\"\"\n",
-        "    Process documents into chunks and add to FAISS vector DB,\n",
-        "    skipping documents with existing parent_id.\n",
-        "    \"\"\"\n",
-        "    from langchain.vectorstores.faiss import FAISS\n",
-        "    import os\n",
-        "\n",
+        "def process_and_store_documents(\n",
+        "    documents: Union[List[str], List[Document]],\n",
+        "    chunk_size: int,\n",
+        "    chunk_overlap: int,\n",
+        "    embedding_model,\n",
+        "    persist_directory: str = \"faiss_index\"\n",
+        ") -> FAISS:\n",
         "    chunks = process_document(documents, chunk_size, chunk_overlap)\n",
-        "\n",
         "    if os.path.exists(persist_directory):\n",
-        "        vector_store = FAISS.load_local(persist_directory, embedding_model, allow_dangerous_deserialization=True)\n",
+        "        vector_store = FAISS.load_local(\n",
+        "            persist_directory,\n",
+        "            embedding_model,\n",
+        "            allow_dangerous_deserialization=True\n",
+        "        )\n",
         "        existing_ids = {\n",
-        "            doc.metadata[\"parent_id\"]\n",
+        "            doc.metadata.get(\"parent_id\")\n",
         "            for doc in vector_store.docstore._dict.values()\n",
         "            if \"parent_id\" in doc.metadata\n",
         "        }\n",
@@ -224,7 +224,7 @@
         "        vector_store = None\n",
         "        existing_ids = set()\n",
         "\n",
-        "    new_chunks = [c for c in chunks if c.metadata[\"parent_id\"] not in existing_ids]\n",
+        "    new_chunks = [c for c in chunks if c.metadata.get(\"parent_id\") not in existing_ids]\n",
         "\n",
         "    if not new_chunks:\n",
         "        print(\"No new documents to add.\")\n",
@@ -236,7 +236,7 @@
         "        vector_store = FAISS.from_documents(new_chunks, embedding_model)\n",
         "\n",
         "    vector_store.save_local(persist_directory)\n",
-        "    return vector_store\n"
+        "    return vector_store"
       ]
     },
     {
