--- a/ragas_evaluation.ipynb
+++ b/ragas_evaluation.ipynb
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 31,
    "id": "e0b78cd9",
    "metadata": {},
    "outputs": [],
@@ -160,7 +160,8 @@
     "    scores_dict = results._scores_dict\n",
     "    df = pd.DataFrame(scores_dict).T\n",
     "    df.columns = [f\"q{i+1}\" for i in range(df.shape[1])]\n",
-    "    df[\"avg\"] = df.mean(axis=1).round(4)\n",
+    "    df = df.round(2)\n",
+    "    df[\"avg\"] = df.mean(axis=1)\n",
     "    return df"
    ]
   },
@@ -604,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 32,
    "id": "e6718624",
    "metadata": {},
    "outputs": [
@@ -725,17 +726,13 @@
        "factual_correctness(mode=f1)  0.87  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Merge the dataframes\n",
     "merged_df = pd.concat([df1, df2, df3], axis=1)\n",
-    "\n",
-    "# Create MultiIndex with labels for each group\n",
-    "n_cols = df1.shape[1]  # number of columns per df\n",
     "\n",
     "merged_df.columns = pd.MultiIndex.from_tuples(\n",
     "    [(\"Simple RAG + Zero-Shot\", col) for col in df1.columns] +\n",
@@ -748,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 33,
    "id": "4ef354fa",
    "metadata": {},
    "outputs": [
@@ -818,7 +815,7 @@
        "factual_correctness(mode=f1)                0.670000  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
