add necessery parameter for initializing vector db

--- a/advanced_rag.ipynb
+++ b/advanced_rag.ipynb
@@ -594,7 +594,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -619,6 +619,7 @@
         "        documents=all_docs,\n",
         "        chunk_size=chunk_size,\n",
         "        chunk_overlap=chunk_overlap,\n",
+        "        embedding_model=EMBEDDING_MODEL,\n",
         "        persist_directory=persist_directory\n",
         "    )\n",
         "\n",
@@ -826,7 +827,7 @@
   ],
   "metadata": {
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "venv",
       "language": "python",
       "name": "python3"
     },
