--- a/notebooks/advanced_rag.ipynb
+++ b/notebooks/advanced_rag.ipynb
@@ -75,7 +75,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -94,7 +94,7 @@
         "\n",
         "llm = ChatOpenAI(\n",
         "    api_key=OPENAI_API_KEY,\n",
-        "    model=\"gpt-3.5-turbo\",\n",
+        "    model=\"gpt-4.1-mini\",\n",
         "    temperature=0.0,\n",
         "    verbose=False\n",
         ")\n",
@@ -627,7 +627,7 @@
         "        openai_key = os.getenv(\"OPENAI_API_KEY\")\n",
         "        if not openai_key:\n",
         "            raise ValueError(\"OPENAI_API_KEY not found in environment variables\")\n",
-        "        llm = ChatOpenAI(api_key=openai_key, model=\"gpt-3.5-turbo\", temperature=0.0)\n",
+        "        llm = ChatOpenAI(api_key=openai_key, model=\"gpt-4.1-mini\", temperature=0.0)\n",
         "\n",
         "    elif model_choice == \"gemini\":\n",
         "        gemini_key = os.getenv(\"GEMINI_API_KEY\")\n",
@@ -827,7 +827,7 @@
   ],
   "metadata": {
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "clean_venv",
       "language": "python",
       "name": "python3"
     },
